src/rules/isort/snapshots/ruff__isort__tests__reorder_within_section.py.snap
---
source: src/isort/mod.rs
expression: checks
---
- kind:
    UnsortedImports: ~
  location:
    row: 1
    column: 0
  end_location:
    row: 3
    column: 0
  fix:
    content: "import os\nimport sys\n"
    location:
      row: 1
      column: 0
    end_location:
      row: 3
      column: 0
  parent: ~

